@@ -5,12 +5,11 @@ import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.stubbing.Answer;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
@@ -22,6 +21,7 @@ import uk.gov.hmcts.reform.civil.ga.model.GeneralApplicationCaseData;
 import uk.gov.hmcts.reform.civil.ga.model.genapplication.GeneralApplicationPbaDetails;
 import uk.gov.hmcts.reform.civil.ga.model.genapplication.HelpWithFeesDetails;
 import uk.gov.hmcts.reform.civil.ga.service.GaPaymentRequestUpdateCallbackService;
+import uk.gov.hmcts.reform.civil.testutils.ObjectMapperFactory;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.Fee;
 import uk.gov.hmcts.reform.civil.model.citizenui.HelpWithFees;
@@ -30,7 +30,6 @@ import uk.gov.hmcts.reform.civil.model.genapplication.GAApplicationType;
 import uk.gov.hmcts.reform.civil.ga.service.HwfNotificationService;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -48,22 +47,20 @@ import static uk.gov.hmcts.reform.civil.callback.CaseEvent.INITIATE_GENERAL_APPL
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.UPDATE_GA_ADD_HWF;
 import static uk.gov.hmcts.reform.civil.enums.dq.GeneralApplicationTypes.STRIKE_OUT;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(classes = {
-    GaFeePaymentOutcomeHWFCallBackHandler.class,
-    JacksonAutoConfiguration.class
-})
+@ExtendWith(MockitoExtension.class)
 public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @Autowired
+    @Spy
+    private ObjectMapper mapper = ObjectMapperFactory.instance();
+
+    @InjectMocks
     private GaFeePaymentOutcomeHWFCallBackHandler handler;
-    @Autowired
-    private ObjectMapper mapper = new ObjectMapper();
-    @MockBean
+
+    @Mock
     private GaPaymentRequestUpdateCallbackService service;
-    @MockBean
+    @Mock
     private HwfNotificationService hwfNotificationService;
-    @MockBean
+    @Mock
     private FeatureToggleService featureToggleService;
 
     @Test
@@ -79,7 +76,7 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
             // Arrange
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .ccdState(CaseState.APPLICATION_ADD_PAYMENT)
-                .generalAppHelpWithFees(HelpWithFees.builder().build())
+                .generalAppHelpWithFees(new HelpWithFees())
                 .hwfFeeType(FeeType.ADDITIONAL)
                 .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(
                     Fee.builder()
@@ -102,7 +99,7 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .ccdState(CaseState.APPLICATION_ADD_PAYMENT)
                 .hwfFeeType(FeeType.ADDITIONAL)
-                .generalAppHelpWithFees(HelpWithFees.builder().helpWithFeesReferenceNumber("123").build())
+                .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("123"))
                 .build();
 
             // Act
@@ -121,7 +118,7 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .ccdState(CaseState.AWAITING_RESPONDENT_RESPONSE)
                 .hwfFeeType(FeeType.APPLICATION)
-                .generalAppHelpWithFees(HelpWithFees.builder().build())
+                .generalAppHelpWithFees(new HelpWithFees())
                 .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(
                     Fee.builder()
                         .calculatedAmountInPence(BigDecimal.valueOf(180))
@@ -144,7 +141,7 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                 .ccdState(CaseState.AWAITING_RESPONDENT_RESPONSE)
                 .hwfFeeType(FeeType.APPLICATION)
-                .generalAppHelpWithFees(HelpWithFees.builder().helpWithFeesReferenceNumber("123").build())
+                .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("123"))
                 .build();
 
             // Act
@@ -166,9 +163,10 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
         void shouldValidationFeePaymentOutcomeGa_withInvalidOutstandingFee() {
             //Given
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
-                    .feePaymentOutcomeDetails(FeePaymentOutcomeDetails.builder().hwfNumberAvailable(YesOrNo.YES)
-                            .hwfNumberForFeePaymentOutcome("HWF-1C4-E34")
-                            .hwfFullRemissionGrantedForGa(YesOrNo.YES).build())
+                    .feePaymentOutcomeDetails(new FeePaymentOutcomeDetails()
+                            .setHwfNumberAvailable(YesOrNo.YES)
+                            .setHwfNumberForFeePaymentOutcome("HWF-1C4-E34")
+                            .setHwfFullRemissionGrantedForGa(YesOrNo.YES))
                     .hwfFeeType(FeeType.APPLICATION)
                     .gaHwfDetails(HelpWithFeesDetails.builder()
                             .outstandingFee(BigDecimal.valueOf(100.00))
@@ -185,9 +183,10 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
         void shouldValidationFeePaymentOutcomeAdditional_withInvalidOutstandingFee() {
             //Given
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
-                    .feePaymentOutcomeDetails(FeePaymentOutcomeDetails.builder().hwfNumberAvailable(YesOrNo.YES)
-                            .hwfNumberForFeePaymentOutcome("HWF-1C4-E34")
-                            .hwfFullRemissionGrantedForAdditionalFee(YesOrNo.YES).build())
+                    .feePaymentOutcomeDetails(new FeePaymentOutcomeDetails()
+                            .setHwfNumberAvailable(YesOrNo.YES)
+                            .setHwfNumberForFeePaymentOutcome("HWF-1C4-E34")
+                            .setHwfFullRemissionGrantedForAdditionalFee(YesOrNo.YES))
                     .hwfFeeType(FeeType.ADDITIONAL)
                     .additionalHwfDetails(HelpWithFeesDetails.builder()
                             .outstandingFee(BigDecimal.valueOf(100.00))
@@ -205,13 +204,13 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
     class AboutToSubmitCallback {
         @Test
         void shouldTrigger_after_payment_GaFee() {
-            List<GeneralApplicationTypes> types = Arrays.asList(STRIKE_OUT);
+            List<GeneralApplicationTypes> types = List.of(STRIKE_OUT);
             GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder()
                     .generalAppPBADetails(GeneralApplicationPbaDetails.builder().fee(
                                     Fee.builder()
                                             .calculatedAmountInPence(BigDecimal.valueOf(10000)).code("OOOCM002").build())
                             .build())
-                    .generalAppHelpWithFees(HelpWithFees.builder().helpWithFeesReferenceNumber("ref").build())
+                    .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("ref"))
                     .gaHwfDetails(HelpWithFeesDetails.builder().build())
                 .generalAppType(GAApplicationType.builder().types(types).build())
                     .hwfFeeType(FeeType.APPLICATION)
@@ -239,7 +238,7 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
                                     Fee.builder()
                                             .calculatedAmountInPence(BigDecimal.valueOf(10000)).code("OOOCM002").build())
                             .build())
-                    .generalAppHelpWithFees(HelpWithFees.builder().helpWithFeesReferenceNumber("ref").build())
+                    .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("ref"))
                     .gaHwfDetails(HelpWithFeesDetails.builder().build())
                     .hwfFeeType(FeeType.APPLICATION)
                     .build();
@@ -263,7 +262,7 @@ public class GaFeePaymentOutcomeHWFCallBackHandlerTest extends GeneralApplicatio
                                     Fee.builder()
                                             .calculatedAmountInPence(BigDecimal.valueOf(10000)).code("OOOCM002").build())
                             .build())
-                    .generalAppHelpWithFees(HelpWithFees.builder().helpWithFeesReferenceNumber("ref").build())
+                    .generalAppHelpWithFees(new HelpWithFees().setHelpWithFeesReferenceNumber("ref"))
                     .gaHwfDetails(HelpWithFeesDetails.builder().build())
                     .additionalHwfDetails(HelpWithFeesDetails.builder().build())
                     .hwfFeeType(FeeType.ADDITIONAL)
