@@ -1,15 +1,14 @@
 package uk.gov.hmcts.reform.civil.ga.handler.callback.user;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
@@ -39,6 +38,7 @@ import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.genapplication.CaseLocationCivil;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
+import uk.gov.hmcts.reform.civil.testutils.ObjectMapperFactory;
 import uk.gov.hmcts.reform.civil.service.CoreCaseDataService;
 import uk.gov.hmcts.reform.civil.service.DeadlinesCalculator;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
@@ -64,11 +64,7 @@ import static uk.gov.hmcts.reform.civil.enums.YesOrNo.NO;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
 import static uk.gov.hmcts.reform.civil.ga.enums.dq.HeardFromRepresentationTypes.CLAIMANT_AND_DEFENDANT;
 
-@SpringBootTest(classes = {
-    JudicialFinalDecisionHandler.class,
-    JacksonAutoConfiguration.class,
-    GaForLipService.class,
-})
+@ExtendWith(MockitoExtension.class)
 class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
     private static final String ON_INITIATIVE_SELECTION_TEST = "As this order was made on the court's own initiative, "
@@ -81,42 +77,30 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     private static final LocalDate localDatePlus7days = LocalDate.now().plusDays(7);
     private static final LocalDate localDatePlus14days = LocalDate.now().plusDays(14);
     private static final LocalDate localDatePlus21days = LocalDate.now().plusDays(21);
-    @Autowired
-    private JudicialFinalDecisionHandler handler;
-    @MockBean
-    private FreeFormOrderGenerator freeFormOrderGenerator;
-    @MockBean
-    private AssistedOrderFormGenerator assistedOrderFormGenerator;
-    @Autowired
-    private ObjectMapper objMapper;
-    @MockBean
-    private GeneralAppLocationRefDataService locationRefDataService;
-    @MockBean
-    private DeadlinesCalculator deadlinesCalculator;
-    @MockBean
-    private IdamClient idamClient;
-    @MockBean
-    private CaseDetailsConverter caseDetailsConverter;
-    @MockBean
-    private CoreCaseDataService coreCaseDataService;
 
-    @BeforeEach
-    void setUp() {
-        when(coreCaseDataService.getCase(any())).thenReturn(CaseDetails.builder().build());
-        when(caseDetailsConverter.toGeneralApplicationCaseData(any())).thenReturn(GeneralApplicationCaseData.builder().build());
-        when(deadlinesCalculator
-                 .getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(7)))
-            .thenReturn(localDatePlus7days);
-        when(idamClient
-                 .getUserInfo(any()))
-            .thenReturn(UserInfo.builder().givenName("John").familyName("Doe").build());
-        when(deadlinesCalculator
-                 .getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(14)))
-            .thenReturn(localDatePlus14days);
-        when(deadlinesCalculator
-                 .getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(21)))
-            .thenReturn(localDatePlus21days);
-    }
+    @Spy
+    private ObjectMapper objMapper = ObjectMapperFactory.instance();
+
+    @Mock
+    private CaseDetailsConverter caseDetailsConverter;
+
+    @InjectMocks
+    private JudicialFinalDecisionHandler handler;
+
+    @Mock
+    private FreeFormOrderGenerator freeFormOrderGenerator;
+    @Mock
+    private AssistedOrderFormGenerator assistedOrderFormGenerator;
+    @Mock
+    private GeneralAppLocationRefDataService locationRefDataService;
+    @Mock
+    private DeadlinesCalculator deadlinesCalculator;
+    @Mock
+    private IdamClient idamClient;
+    @Mock
+    private CoreCaseDataService coreCaseDataService;
+    @Mock
+    private GaForLipService gaForLipService;
 
     @Test
     void handleEventsReturnsTheExpectedCallbackEvent() {
@@ -125,6 +109,8 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
 
     @Test
     void setCaseName() {
+        when(idamClient.getUserInfo(any()))
+            .thenReturn(UserInfo.builder().givenName("John").familyName("Doe").build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder()
             .atStateClaimDraft()
             .build().toBuilder()
@@ -143,6 +129,12 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldPopulateFreeFormOrderValues_onMidEventCallback() {
         // Given
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(7)))
+            .thenReturn(localDatePlus7days);
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(14)))
+            .thenReturn(localDatePlus14days);
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(21)))
+            .thenReturn(localDatePlus21days);
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().atStateClaimDraft()
             .build().toBuilder().isMultiParty(NO)
             .generalAppDetailsOfOrder("order test")
@@ -170,6 +162,12 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     void shouldPopulate_AssistedOrderFormOrderValues_onMidEventCallback() {
 
         // Given
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(7)))
+            .thenReturn(localDatePlus7days);
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(14)))
+            .thenReturn(localDatePlus14days);
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(21)))
+            .thenReturn(localDatePlus21days);
         List<LocationRefData> locations = new ArrayList<>();
         locations.add(LocationRefData.builder().siteName("Site Name 1").courtAddress("Address1").postcode("18000")
                           .build());
@@ -227,7 +225,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
                 "assistedOrderAppealSecondOption")
             .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
         assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("assistedOrderFurtherHearingDetails")))
-            .get("alternativeHearingLocation")).get("list_items")).get(0))
+            .get("alternativeHearingLocation")).get("list_items")).getFirst())
                        .get("label")).isEqualTo("Site Name 1 - Address1 - 18000");
         assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("assistedOrderFurtherHearingDetails")))
             .get("hearingLocationList")).get("list_items")).get(0))
@@ -244,6 +242,12 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     void shouldPopulate_AssistedOrderFormOrderValues1v2_onMidEventCallback() {
 
         // Given
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(7)))
+            .thenReturn(localDatePlus7days);
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(14)))
+            .thenReturn(localDatePlus14days);
+        when(deadlinesCalculator.getJudicialOrderDeadlineDate(any(LocalDateTime.class), eq(21)))
+            .thenReturn(localDatePlus21days);
         List<LocationRefData> locations = new ArrayList<>();
         locations.add(LocationRefData.builder().siteName("Site Name 1").courtAddress("Address1").postcode("18000")
                           .build());
@@ -305,7 +309,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
                 "assistedOrderAppealSecondOption")
             .extracting("assistedOrderAppealDate").isEqualTo(localDatePlus21days.toString());
         assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("assistedOrderFurtherHearingDetails")))
-            .get("alternativeHearingLocation")).get("list_items")).get(0))
+            .get("alternativeHearingLocation")).get("list_items")).getFirst())
                        .get("label")).isEqualTo("Site Name 1 - Address1 - 18000");
         assertThat(((Map) ((ArrayList) ((Map) ((Map) (response.getData().get("assistedOrderFurtherHearingDetails")))
             .get("hearingLocationList")).get("list_items")).get(0))
@@ -327,7 +331,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
 
         // Given
         when(freeFormOrderGenerator.generate(any(), any())).thenReturn(
-            CaseDocument.builder().documentLink(Document.builder().build()).build());
+            new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder()
@@ -350,7 +354,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
 
         // Given
         when(freeFormOrderGenerator.generate(any(), any())).thenReturn(
-            CaseDocument.builder().documentLink(Document.builder().build()).build());
+            new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder()
@@ -372,7 +376,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     void shouldNotShowError_When_OrderDateIsSingleSelection() {
 
         when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
+            .thenReturn(new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder()
@@ -396,8 +400,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_OrderDateIsSingleSelectionAfterTodayDate() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -415,8 +417,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldNotShowError_When_OrderDateIsDateRange_FromIsAfter() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -435,8 +435,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldNotShowError_When_OrderDateIsDateRange_ToIsAfter() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -454,8 +452,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_DatesToAvoidIsBeforeTodayDate() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -478,8 +474,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_JudgeHeardFromClaimantListIsNull() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -503,8 +497,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_JudgeHeardFromDefendantListIsNull() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -528,8 +520,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_JudgeHeardFromDefendantTwoListIsNull() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder()
             .generalOrderApplication()
             .build()
@@ -557,7 +547,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     void shouldNotShowError_When_DatesToAvoidIsAfterTodayDate() {
 
         when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
+            .thenReturn(new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -581,7 +571,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     void shouldNotShowError_When_assistedOrderCostsFirstDropdownDateAndThirdDropdownDateIsAfterTodayDate() {
 
         when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
+            .thenReturn(new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -610,8 +600,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_assistedOrderCostsFirstDropdownDateIsAfterTodayDateAndThirdDropdownDateIsPrevious() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -641,8 +629,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_assistedOrderCostsFirstDropdownDateIsPreviousDateAndThirdDropdownDateIsPrevious() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -672,8 +658,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_assistedOrderCostsFirstDropdownDateIsPreviousDateAndThirdDropdownDateIsAfterDate() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -703,8 +687,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_assistedOrderAppealFirstDropdownDateIsPreviousDate() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -742,8 +724,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_assistedOrderAppealSecondDropdownDateIsPreviousDate() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -779,7 +759,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     void shouldNotShowError_When_assistedOrderAppealSecondDropdownDateIsAfterDate() {
 
         when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
+            .thenReturn(new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -815,7 +795,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     void shouldNotShowError_When_assistedOrderAppealChoicesAreEmpty() {
 
         when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
+            .thenReturn(new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -847,8 +827,6 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldShowError_When_OrderDateIsDateRange_FromIsAfterDateTo() {
 
-        when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -867,7 +845,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     void shouldNotShowError_When_OrderDateIsDateRange_FromIsAfterDateTo() {
 
         when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
+            .thenReturn(new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER)
@@ -887,7 +865,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
 
         // Given
         when(freeFormOrderGenerator.generate(any(), any())).thenReturn(
-            CaseDocument.builder().documentLink(Document.builder().build()).build());
+            new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder()
@@ -907,8 +885,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
 
     @Test
     void shouldGenerateFinalOrderPreviewDocumentWhenPopulateFinalOrderPreviewDocIsCalled() {
-        when(freeFormOrderGenerator.generate(any(), any())).thenReturn(CaseDocument
-                                                                           .builder().documentLink(Document.builder().build()).build());
+        when(freeFormOrderGenerator.generate(any(), any())).thenReturn(new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.FREE_FORM_ORDER).build();
@@ -925,7 +902,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
     @Test
     void shouldGenerateAssistedOrderPreviewDocumentWhenPopulateFinalOrderPreviewDocIsCalled() {
         when(assistedOrderFormGenerator.generate(any(), any()))
-            .thenReturn(CaseDocument.builder().documentLink(Document.builder().build()).build());
+            .thenReturn(new CaseDocument().setDocumentLink(new Document()));
         GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().generalOrderApplication()
             .build()
             .toBuilder().finalOrderSelection(GaFinalOrderSelection.ASSISTED_ORDER).build();
@@ -989,7 +966,7 @@ class JudicialFinalDecisionHandlerTest extends GeneralApplicationBaseCallbackHan
 
         @Test
         void shouldSetUpReadyBusinessProcess() {
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder().gaFinalOrderDocPreview(Document.builder().build()).build();
+            GeneralApplicationCaseData caseData = GeneralApplicationCaseData.builder().gaFinalOrderDocPreview(new Document()).build();
 
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
