@@ -4,10 +4,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
@@ -27,6 +28,7 @@ import uk.gov.hmcts.reform.civil.ga.handler.GeneralApplicationBaseCallbackHandle
 import uk.gov.hmcts.reform.civil.ga.model.GeneralApplicationCaseData;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
+import uk.gov.hmcts.reform.civil.testutils.ObjectMapperFactory;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.BusinessProcess;
 import uk.gov.hmcts.reform.civil.ga.model.GARespondentRepresentative;
@@ -51,7 +53,6 @@ import uk.gov.hmcts.reform.civil.ga.service.DocUploadDashboardNotificationServic
 import uk.gov.hmcts.reform.civil.ga.service.GaForLipService;
 import uk.gov.hmcts.reform.civil.ga.service.GeneralAppLocationRefDataService;
 import uk.gov.hmcts.reform.civil.ga.service.ParentCaseUpdateHelper;
-import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
 import uk.gov.hmcts.reform.civil.utils.ElementUtils;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserInfo;
@@ -85,51 +86,40 @@ import static uk.gov.hmcts.reform.civil.model.common.DynamicList.fromList;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@SuppressWarnings({"checkstyle:EmptyLineSeparator", "checkstyle:Indentation"})
-@SpringBootTest(classes = {
-    CaseDetailsConverter.class,
-    RespondToApplicationHandler.class,
-    JacksonAutoConfiguration.class,
-    AssignCategoryId.class
-},
-    properties = {"reference.database.enabled=false"})
+@ExtendWith(MockitoExtension.class)
 public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @Autowired
+    @Spy
+    private ObjectMapper objectMapper = ObjectMapperFactory.instance();
+
+    @Mock
+    private CaseDetailsConverter caseDetailsConverter;
+
+    @InjectMocks
     RespondToApplicationHandler handler;
 
-    @Autowired
-    ObjectMapper objectMapper;
-
-    @MockBean
-    CaseDetailsConverter caseDetailsConverter;
-
-    @MockBean
+    @Mock
     private FeatureToggleService featureToggleService;
-    @MockBean
+    @Mock
     private DocUploadDashboardNotificationService dashboardNotificationService;
-    @MockBean
+    @Mock
     IdamClient idamClient;
-    @MockBean
+    @Mock
     GaForLipService gaForLipService;
-    @MockBean
+    @Mock
     ParentCaseUpdateHelper parentCaseUpdateHelper;
 
-    @MockBean
+    @Mock
     private CoreCaseDataService coreCaseDataService;
 
-    @MockBean
+    @Mock
     protected GeneralAppLocationRefDataService locationRefDataService;
+
     List<Element<Document>> documents = new ArrayList<>();
+
     @BeforeEach
-        public void setUp() throws IOException {
-
-        when(idamClient.getUserInfo(anyString())).thenReturn(UserInfo.builder()
-                                                                 .sub(DUMMY_EMAIL)
-                                                                 .uid(DEF_UID)
-                                                                 .build());
-
-        Document document = Document.builder().documentUrl("url").documentFileName("file").build();
+    public void setUp() throws IOException {
+        Document document = new Document().setDocumentUrl("url").setDocumentFileName("file");
         documents.add(ElementUtils.element(document));
     }
 
@@ -204,8 +194,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
     @Test
     void buildResponseConfirmationReturnsCorrectMessageWhenGaHasLipAndVaryJudgeApppLRvLR() {
         when(gaForLipService.isGaForLip(any())).thenReturn(false);
-        when(gaForLipService.isLipApp(any())).thenReturn(false);
-        when(gaForLipService.isLipResp(any())).thenReturn(false);
         CallbackParams params = callbackParamsOf(getVaryCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION),
                                                  CallbackType.SUBMITTED);
         var response = (SubmittedCallbackResponse) handler.handle(params);
@@ -218,8 +206,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
     void buildResponseConfirmationReturnsCorrectMessageWhenWelshFlagEnabledAndApplicantBilingual() {
         when(featureToggleService.isGaForWelshEnabled()).thenReturn(true);
         when(gaForLipService.isGaForLip(any())).thenReturn(true);
-        when(gaForLipService.isLipApp(any())).thenReturn(true);
-        when(gaForLipService.isLipResp(any())).thenReturn(false);
         GeneralApplicationCaseData casedata = getVaryCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION).toBuilder()
             .isGaApplicantLip(YES).applicantBilingualLanguagePreference(YES).build();
 
@@ -228,18 +214,22 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         verifyNoInteractions(dashboardNotificationService);
 
         assertThat(response).isNotNull();
+        assertThat(response.getConfirmationHeader()).isEqualTo("# You have provided the requested information");
     }
 
     @Test
     void buildResponseConfirmationReturnsCorrectMessageWhenWelshFlagEnabledAndApplicantNotBilingual() {
         when(featureToggleService.isGaForWelshEnabled()).thenReturn(true);
-        GeneralApplicationCaseData casedata = getVaryCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION).toBuilder().build();
+        when(gaForLipService.isGaForLip(any())).thenReturn(true);
+        GeneralApplicationCaseData casedata = getVaryCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION).toBuilder()
+            .isGaApplicantLip(YES).applicantBilingualLanguagePreference(NO).build();
 
         CallbackParams params = callbackParamsOf(casedata, CallbackType.SUBMITTED);
         var response = (SubmittedCallbackResponse) handler.handle(params);
         verifyNoInteractions(dashboardNotificationService);
 
         assertThat(response).isNotNull();
+        assertThat(response.getConfirmationHeader()).isEqualTo("# You have provided the requested information");
     }
 
     @Test
@@ -343,8 +333,11 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(response).isNotNull();
         assertThat(response.getErrors()).isEqualTo(errors);
     }
+
     @Test
     void aboutToStartCallbackChecksRespondendResponseBeforeProceeding() {
+
+        mockIdamClient(DEF_UID);
 
         List<LocationRefData> locations = new ArrayList<>();
         locations.add(LocationRefData.builder().siteName("siteName").courtAddress("court Address").postcode("post code")
@@ -370,6 +363,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     @Test
     void aboutToStartCallbackChecksRespondendResponseBeforeProceeding_VaryJudgement() {
+
+        mockIdamClient(DEF_UID);
 
         List<LocationRefData> locations = new ArrayList<>();
         locations.add(LocationRefData.builder().siteName("siteName").courtAddress("court Address").postcode("post code")
@@ -431,11 +426,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         CallbackParams params = callbackParamsOf(updateCaseData.build(),
                                                  CallbackType.MID, "validate-debtor-offer");
 
-
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
         assertThat(response.getErrors()).isNotNull();
-        assertThat(response.getErrors().get(0)).isEqualTo(PAYMENT_DATE_CANNOT_BE_IN_PAST);
+        assertThat(response.getErrors().getFirst()).isEqualTo(PAYMENT_DATE_CANNOT_BE_IN_PAST);
     }
 
     @Test
@@ -452,7 +446,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         CallbackParams params = callbackParamsOf(updateCaseData.build(),
                                                  CallbackType.MID, "validate-debtor-offer");
-
 
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
@@ -531,75 +524,68 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     private CallbackParams getParams(int trialRanges) {
         return switch (trialRanges) {
-            case 0 -> CallbackParams.builder()
+            case 0 -> new CallbackParams()
                 .type(CallbackType.MID)
                 .pageId("hearing-screen-response")
                 .caseData(getCaseWithInvalidTrailDateRange())
                 .request(CallbackRequest.builder()
                              .eventId("RESPOND_TO_APPLICATION")
-                             .build())
-                .build();
-            case 1 -> CallbackParams.builder()
+                             .build());
+            case 1 -> new CallbackParams()
                 .type(CallbackType.MID)
                 .pageId("hearing-screen-response")
                 .caseData(getCaseWithInvalidDateToRange())
                 .request(CallbackRequest.builder()
                              .eventId("RESPOND_TO_APPLICATION")
-                             .build())
-                .build();
-            case 2 -> CallbackParams.builder()
+                             .build());
+            case 2 -> new CallbackParams()
                 .type(CallbackType.MID)
                 .pageId("hearing-screen-response")
                 .caseData(getCaseWithNullFromAndToDate())
                 .request(CallbackRequest.builder()
                              .eventId("RESPOND_TO_APPLICATION")
-                             .build())
-                .build();
-            case 3 -> CallbackParams.builder()
+                             .build());
+            case 3 -> new CallbackParams()
                 .type(CallbackType.MID)
                 .pageId("hearing-screen-response")
                 .caseData(getCaseWithUnavailableDates())
                 .request(CallbackRequest.builder()
                              .eventId("RESPOND_TO_APPLICATION")
-                             .build())
-                .build();
-            case 4 -> CallbackParams.builder()
+                             .build());
+            case 4 -> new CallbackParams()
                 .type(CallbackType.MID)
                 .pageId("hearing-screen-response")
                 .caseData(getCaseWithUnavailableDatesBeforeToday())
                 .request(CallbackRequest.builder()
                              .eventId("RESPOND_TO_APPLICATION")
-                             .build())
-                .build();
-            case 5 -> CallbackParams.builder()
+                             .build());
+            case 5 -> new CallbackParams()
                 .type(CallbackType.MID)
                 .pageId("hearing-screen-response")
                 .caseData(getCaseWithNullUnavailableDates())
                 .request(CallbackRequest.builder()
                              .eventId("RESPOND_TO_APPLICATION")
-                             .build())
-                .build();
-            case 6 -> CallbackParams.builder()
+                             .build());
+            case 6 -> new CallbackParams()
                 .type(CallbackType.MID)
                 .pageId("hearing-screen-response")
                 .caseData(getCaseWithNullUnavailableDateFrom())
                 .request(CallbackRequest.builder()
                              .eventId("RESPOND_TO_APPLICATION")
-                             .build())
-                .build();
-            default -> CallbackParams.builder()
+                             .build());
+            default -> new CallbackParams()
                 .type(CallbackType.MID)
                 .pageId("hearing-screen-response")
                 .caseData(getCase(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION))
                 .request(CallbackRequest.builder()
                              .eventId("RESPOND_TO_APPLICATION")
-                             .build())
-                .build();
+                             .build());
         };
     }
 
     @Test
     void shouldReturn_Awaiting_Respondent_Response_1Def_2Responses() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -622,26 +608,25 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
         CallbackParams params = callbackParamsOf(caseData, CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
 
         assertThat(response).isNotNull();
         GeneralApplicationCaseData responseCaseData = getResponseCaseData(response);
         assertThat(responseCaseData.getRespondentsResponses()).hasSize(1);
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue().getGaHearingDetails()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue().getGaHearingDetails()
                        .getHearingPreferredLocation().getListItems()).hasSize(1);
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue().getGaHearingDetails()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue().getGaHearingDetails()
                        .getRespondentResponsePartyName()).isEqualTo("Defendant One - Defendant");
     }
 
     @Test
     void shouldReturn_Application_Submitted_Awaiting_Judicial_Decision_2Def_2Responses() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -667,15 +652,13 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
         CallbackParams params = callbackParamsOf(caseData, CallbackType.ABOUT_TO_SUBMIT);
 
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
 
         assertThat(response).isNotNull();
 
@@ -691,6 +674,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     @Test
     void shouldReturn_Application_Submitted_Awaiting_Judicial_Decision_1Def_1Response() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -698,8 +682,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
             .email(DUMMY_EMAIL).organisationIdentifier("org2").build();
 
         respondentSols.add(element(respondent1));
-
-        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
 
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -708,20 +690,20 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
             .thenReturn(getCivilCaseData(DUMMY_EMAIL, DUMMY_EMAIL, DUMMY_EMAIL));
 
         // GA CaseData
+        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
         CallbackParams params = callbackParamsOf(caseData, CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
         assertThat(response).isNotNull();
     }
 
     @Test
     void shouldReturn_Application_Submitted_Awaiting_Judicial_Decision_1Def_1ResponseLip() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -729,9 +711,6 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
             .email(DUMMY_EMAIL).organisationIdentifier("org2").build();
 
         respondentSols.add(element(respondent1));
-
-        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
-        GeneralApplicationCaseData updatedCaseData = caseData.toBuilder().parentClaimantIsApplicant(NO).build();
 
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -744,16 +723,17 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                             .respondentSolicitor1EmailAddress(DUMMY_EMAIL)
                             .build());
         when(gaForLipService.isLipResp(any())).thenReturn(true);
+
         // GA CaseData
+        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
+        GeneralApplicationCaseData updatedCaseData = caseData.toBuilder().parentClaimantIsApplicant(NO).build();
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(updatedCaseData);
 
         CallbackParams params = callbackParamsOf(updatedCaseData, CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
         assertThat(response).isNotNull();
     }
 
@@ -771,6 +751,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         GeneralApplicationCaseData.GeneralApplicationCaseDataBuilder<?, ?> caseDataBuilder = caseData.toBuilder();
         caseDataBuilder.isMultiParty(YES);
 
+        mockIdamClient(DEF_UID);
+
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -779,24 +761,24 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
         CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
         GeneralApplicationCaseData responseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
         assertThat(response).isNotNull();
         assertThat(responseData.getRespondentsResponses()
-                       .get(0).getValue().getGaHearingDetails().getRespondentResponsePartyName())
+                       .getFirst().getValue().getGaHearingDetails().getRespondentResponsePartyName())
             .isEqualTo("Defendant Two - Defendant");
     }
 
     @Test
     void shouldReturn_Awaiting_Respondent_Response_2Def_1Response() {
+
+        mockIdamClient(DEF_UID);
 
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -819,15 +801,13 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
         CallbackParams params = callbackParamsOf(caseData, CallbackType.ABOUT_TO_SUBMIT);
 
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
         assertThat(response).isNotNull();
         GeneralApplicationCaseData responseCaseData = getResponseCaseData(response);
         assertThat(responseCaseData.getGeneralAppRespondent1Representative()
@@ -837,6 +817,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
     @Test
     void shouldReturn_Awaiting_Respondent_Response_For_NoDef_NoResponse() {
+        mockIdamClient(DEF_UID);
 
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -848,15 +829,13 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseData);
 
         CallbackParams params = callbackParamsOf(caseData, CallbackType.ABOUT_TO_SUBMIT);
 
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
         assertThat(response).isNotNull();
     }
 
@@ -868,6 +847,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         caseDataBuilder.parentClaimantIsApplicant(NO)
             .generalAppType(GAApplicationType.builder().types(List.of(SUMMARY_JUDGEMENT)).build()).build();
 
+        mockIdamClient(DEF_UID);
+
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -876,20 +857,18 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
         CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
 
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
         assertThat(response).isNotNull();
         assertThat(responseCaseData.getHearingDetailsResp()).isNull();
         assertThat(responseCaseData.getRespondentsResponses()
-                       .get(0).getValue().getGaHearingDetails()
+                       .getFirst().getValue().getGaHearingDetails()
                        .getRespondentResponsePartyName()).isEqualTo("Claimant One - Claimant");
     }
 
@@ -904,6 +883,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                                                .hearingPreferencesPreferredType(GAHearingType.VIDEO).build());
         caseDataBuilder.isGaRespondentOneLip(YES);
 
+        mockIdamClient(DEF_UID);
+
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -912,25 +893,25 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
         CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
 
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
         assertThat(response).isNotNull();
         assertThat(responseCaseData.getHearingDetailsResp()).isNull();
         assertThat(responseCaseData.getRespondentsResponses()
-                       .get(0).getValue().getGaHearingDetails()
+                       .getFirst().getValue().getGaHearingDetails()
                        .getHearingPreferredLocation().getValue().getLabel()).isEqualTo("ABCD - RG0 0AL");
     }
 
     @Test
     void shouldReturn_No_WhenRespondIsNotAcceptedByRespondent() {
+
+        mockIdamClient(DEF_UID);
 
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -952,24 +933,21 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                                                      .generalAppRespondent1Representative(NO).build())
             .generalAppRespondDocument(documents);
 
-
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
         CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
 
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
         assertThat(response).isNotNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGeneralAppRespondent1Representative()).isEqualTo(NO);
-        assertThat(responseCaseData.getRespondentsResponses().get(0)
+        assertThat(responseCaseData.getRespondentsResponses().getFirst()
                 .getValue().getGaRespondentResponseReason()).isEqualTo("reason");
         assertThat(responseCaseData.getGeneralAppRespondDocument()).isNull();
         assertThat(responseCaseData.getGeneralAppRespondReason()).isNull();
@@ -977,17 +955,14 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(responseCaseData.getGaAddlDoc().size()).isEqualTo(1);
         assertThat(responseCaseData.getGaAddlDocStaff().size()).isEqualTo(1);
         assertThat(responseCaseData.getGaAddlDocRespondentSol().size()).isEqualTo(1);
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getDocumentName()).isEqualTo("Respond evidence");
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getCreatedBy()).isEqualTo("Respondent One");
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getDocumentLink().getCategoryID()).isEqualTo("applications");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getDocumentName()).isEqualTo("Respond evidence");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getCreatedBy()).isEqualTo("Respondent One");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getDocumentLink().getCategoryID()).isEqualTo("applications");
     }
 
     @Test
     void shouldReturn_No_WhenRespondIsNotAcceptedByRespondentTWO() {
-        when(idamClient.getUserInfo(anyString())).thenReturn(UserInfo.builder()
-                .sub(DUMMY_EMAIL)
-                .uid(DEF2_UID)
-                .build());
+        mockIdamClient(DEF2_UID);
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -1008,24 +983,21 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                         .generalAppRespondent1Representative(NO).build())
                 .generalAppRespondDocument(documents);
 
-
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
                 .thenReturn(caseDataBuilder.build());
 
         CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
 
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
         assertThat(response).isNotNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGeneralAppRespondent1Representative()).isEqualTo(NO);
-        assertThat(responseCaseData.getRespondentsResponses().get(0)
+        assertThat(responseCaseData.getRespondentsResponses().getFirst()
                 .getValue().getGaRespondentResponseReason()).isEqualTo("reason");
         assertThat(responseCaseData.getGeneralAppRespondDocument()).isNull();
         assertThat(responseCaseData.getGeneralAppRespondReason()).isNull();
@@ -1033,9 +1005,9 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         assertThat(responseCaseData.getGaAddlDoc().size()).isEqualTo(1);
         assertThat(responseCaseData.getGaAddlDocStaff().size()).isEqualTo(1);
         assertThat(responseCaseData.getGaAddlDocRespondentSolTwo().size()).isEqualTo(1);
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getDocumentName()).isEqualTo("Respond evidence");
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getCreatedBy()).isEqualTo("Respondent Two");
-        assertThat(responseCaseData.getGaAddlDoc().get(0).getValue().getDocumentLink().getCategoryID()).isEqualTo("applications");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getDocumentName()).isEqualTo("Respond evidence");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getCreatedBy()).isEqualTo("Respondent Two");
+        assertThat(responseCaseData.getGaAddlDoc().getFirst().getValue().getDocumentLink().getCategoryID()).isEqualTo("applications");
     }
 
     @Test
@@ -1049,14 +1021,14 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                 .gaRespondentConsent(NO)
                 .generalAppRespondConsentDocument(documents);
 
+        mockIdamClient(DEF_UID);
+
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
         CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
-
 
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -1064,15 +1036,14 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         when(caseDetailsConverter.toGeneralApplicationCaseData(civil))
             .thenReturn(getCivilCaseData(DUMMY_EMAIL, DUMMY_EMAIL, DUMMY_EMAIL));
 
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
 
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
         assertThat(response).isNotNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGeneralAppRespondent1Representative()).isEqualTo(NO);
-        assertThat(responseCaseData.getRespondentsResponses().get(0)
+        assertThat(responseCaseData.getRespondentsResponses().getFirst()
                 .getValue().getGaRespondentResponseReason()).isEqualTo("reason");
         assertThat(responseCaseData.getGeneralAppRespondConsentDocument()).isNull();
         assertThat(responseCaseData.getGeneralAppRespondConsentReason()).isNull();
@@ -1097,6 +1068,8 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                 .paymentSetDate(planDate).build())
             .generalAppRespondDebtorDocument(documents);
 
+        mockIdamClient(DEF_UID);
+
         // Civil Claim CaseDate
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -1105,14 +1078,12 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
         CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
 
         String expectedReason = "Proposed payment plan is I will accept payment in full by a set date. " +
                 "Proposed set date is 29 November 2023. " +
@@ -1120,9 +1091,9 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
         assertThat(response).isNotNull();
         assertThat(responseCaseData.getHearingDetailsResp()).isNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                        .getGeneralAppRespondent1Representative()).isEqualTo(NO);
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGaRespondentResponseReason()).isEqualTo(expectedReason);
         assertThat(responseCaseData.getGeneralAppRespondDebtorDocument()).isNull();
         assertThat(responseCaseData.getGaAddlDoc().size()).isEqualTo(1);
@@ -1149,9 +1120,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                     .monthlyInstalment(new BigDecimal(1234)).build())
             .generalAppRespondDebtorDocument(documents);
 
+        mockIdamClient(DEF_UID);
+
         // GA CaseData
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
@@ -1165,11 +1137,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
         String expectedReason = "Proposed payment plan is I will accept the following instalments per month." +
                 " Proposed instalments per month is 12.34 pounds." +
                 " Objections to the debtor's proposals is I have no money";
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                 .getGaRespondentResponseReason()).isEqualTo(expectedReason);
     }
 
@@ -1184,7 +1155,7 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                         GARespondentDebtorOfferOptionsGAspec.ACCEPT)
                     .paymentPlan(GADebtorPaymentPlanGAspec.PAYFULL).build());
 
-        CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
+        mockIdamClient(DEF_UID);
 
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
@@ -1194,23 +1165,24 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         // GA Case Data
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(caseDataBuilder.build());
 
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams params = callbackParamsOf(caseDataBuilder.build(), CallbackType.ABOUT_TO_SUBMIT);
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
 
         GeneralApplicationCaseData responseCaseData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
         assertThat(response).isNotNull();
         assertThat(responseCaseData.getHearingDetailsResp()).isNull();
-        assertThat(responseCaseData.getRespondentsResponses().get(0).getValue()
+        assertThat(responseCaseData.getRespondentsResponses().getFirst().getValue()
                        .getGeneralAppRespondent1Representative()).isEqualTo(YES);
     }
 
     @Test
     void shouldReturn_Null_RespondentResponseAfterAddingToCollections() {
+        mockIdamClient(DEF_UID);
 
         List<Element<GASolicitorDetailsGAspec>> respondentSols = new ArrayList<>();
 
@@ -1219,17 +1191,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
 
         respondentSols.add(element(respondent1));
 
-        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
         DynamicList dynamicListTest = fromList(getSampleCourLocations());
         Optional<DynamicListElement> first = dynamicListTest.getListItems().stream().findFirst();
         first.ifPresent(dynamicListTest::setValue);
 
-        GeneralApplicationCaseData updatedCaseData = caseData.toBuilder().hearingDetailsResp(GAHearingDetails.builder()
-                                                                               .hearingPreferredLocation(
-                                                                                   dynamicListTest)
-                                                                               .hearingPreferencesPreferredType(
-                                                                                   GAHearingType.IN_PERSON)
-                                                                               .build()).build();
         // Civil Claim Case Data
         CaseDetails civil = CaseDetails.builder().id(123L).build();
         when(coreCaseDataService.getCase(123L)).thenReturn(civil);
@@ -1237,21 +1202,32 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
             .thenReturn(getCivilCaseData(DUMMY_EMAIL, DUMMY_EMAIL, DUMMY_EMAIL));
 
         // GA Case Data
+        GeneralApplicationCaseData caseData = getCase(respondentSols, respondentsResponses);
+        GeneralApplicationCaseData updatedCaseData = caseData.toBuilder()
+            .hearingDetailsResp(GAHearingDetails.builder()
+                                    .hearingPreferredLocation(dynamicListTest)
+                                    .hearingPreferencesPreferredType(GAHearingType.IN_PERSON)
+                                    .build()).build();
         CaseDetails ga = CaseDetails.builder().id(456L).build();
-        when(coreCaseDataService.getCase(456L)).thenReturn(ga);
         when(caseDetailsConverter.toGeneralApplicationCaseData(ga))
             .thenReturn(updatedCaseData);
 
         CallbackParams params = callbackParamsOf(updatedCaseData, CallbackType.ABOUT_TO_SUBMIT);
-        CallbackParams.CallbackParamsBuilder callbackParamsBuilder = params.toBuilder();
-        callbackParamsBuilder.request(CallbackRequest.builder().caseDetails(ga).build());
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsBuilder.build());
+        CallbackParams callbackParamsWithRequest = paramsWithRequest(params, CallbackRequest.builder().caseDetails(ga).build());
+        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsWithRequest);
 
         assertThat(response).isNotNull();
         GeneralApplicationCaseData responseCaseData = getResponseCaseData(response);
         assertThat(responseCaseData.getGeneralAppRespondent1Representative()
                        .getGeneralAppRespondent1Representative()).isNull();
         assertThat(responseCaseData.getRespondentsResponses()).hasSize(1);
+    }
+
+    private void mockIdamClient(String defUid) {
+        when(idamClient.getUserInfo(anyString())).thenReturn(UserInfo.builder()
+                                                                 .sub(DUMMY_EMAIL)
+                                                                 .uid(defUid)
+                                                                 .build());
     }
 
     private GeneralApplicationCaseData getResponseCaseData(AboutToStartOrSubmitCallbackResponse response) {
@@ -1441,13 +1417,11 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
             .generalAppApplnSolicitor(GASolicitorDetailsGAspec.builder()
                                           .email("abc@gmail.com").id(APP_UID).build())
             .generalAppRespondentSolicitors(getRespondentSolicitors())
-            .businessProcess(BusinessProcess
-                                 .builder()
-                                 .camundaEvent(CAMUNDA_EVENT)
-                                 .processInstanceId(BUSINESS_PROCESS_INSTANCE_ID)
-                                 .status(BusinessProcessStatus.STARTED)
-                                 .activityId(ACTIVITY_ID)
-                                 .build())
+            .businessProcess(new BusinessProcess()
+                                 .setCamundaEvent(CAMUNDA_EVENT)
+                                 .setProcessInstanceId(BUSINESS_PROCESS_INSTANCE_ID)
+                                 .setStatus(BusinessProcessStatus.STARTED)
+                                 .setActivityId(ACTIVITY_ID))
             .ccdState(state)
             .build();
     }
@@ -1485,13 +1459,11 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                 .generalAppApplnSolicitor(GASolicitorDetailsGAspec.builder()
                         .email("abc@gmail.com").id(APP_UID).build())
             .generalAppRespondentSolicitors(getRespondentSolicitors())
-            .businessProcess(BusinessProcess
-                                 .builder()
-                                 .camundaEvent(CAMUNDA_EVENT)
-                                 .processInstanceId(BUSINESS_PROCESS_INSTANCE_ID)
-                                 .status(BusinessProcessStatus.STARTED)
-                                 .activityId(ACTIVITY_ID)
-                                 .build())
+            .businessProcess(new BusinessProcess()
+                                 .setCamundaEvent(CAMUNDA_EVENT)
+                                 .setProcessInstanceId(BUSINESS_PROCESS_INSTANCE_ID)
+                                 .setStatus(BusinessProcessStatus.STARTED)
+                                 .setActivityId(ACTIVITY_ID))
             .ccdState(state)
             .build();
     }
@@ -1530,13 +1502,11 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                 GAApplicationType
                     .builder()
                     .types(types).build())
-            .businessProcess(BusinessProcess
-                                 .builder()
-                                 .camundaEvent(CAMUNDA_EVENT)
-                                 .processInstanceId(BUSINESS_PROCESS_INSTANCE_ID)
-                                 .status(BusinessProcessStatus.STARTED)
-                                 .activityId(ACTIVITY_ID)
-                                 .build())
+            .businessProcess(new BusinessProcess()
+                                 .setCamundaEvent(CAMUNDA_EVENT)
+                                 .setProcessInstanceId(BUSINESS_PROCESS_INSTANCE_ID)
+                                 .setStatus(BusinessProcessStatus.STARTED)
+                                 .setActivityId(ACTIVITY_ID))
             .ccdState(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION)
             .build();
     }
@@ -1575,13 +1545,11 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                     .types(types).build())
             .judicialDecision(GAJudicialDecision.builder().decision(
                 GAJudgeDecisionOption.MAKE_ORDER_FOR_WRITTEN_REPRESENTATIONS).build())
-            .businessProcess(BusinessProcess
-                                 .builder()
-                                 .camundaEvent(CAMUNDA_EVENT)
-                                 .processInstanceId(BUSINESS_PROCESS_INSTANCE_ID)
-                                 .status(BusinessProcessStatus.STARTED)
-                                 .activityId(ACTIVITY_ID)
-                                 .build())
+            .businessProcess(new BusinessProcess()
+                                 .setCamundaEvent(CAMUNDA_EVENT)
+                                 .setProcessInstanceId(BUSINESS_PROCESS_INSTANCE_ID)
+                                 .setStatus(BusinessProcessStatus.STARTED)
+                                 .setActivityId(ACTIVITY_ID))
             .ccdState(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION)
             .build();
     }
@@ -1613,5 +1581,10 @@ public class RespondToApplicationHandlerTest extends GeneralApplicationBaseCallb
                                                 .build())
             .respondent2SameLegalRepresentative(NO)
             .build();
+    }
+
+    private CallbackParams paramsWithRequest(CallbackParams params, CallbackRequest request) {
+        return params.copy()
+            .request(request);
     }
 }
